Further changes to test users

--- a/templates/driver.html
+++ b/templates/driver.html
@@ -80,7 +80,7 @@
                     <strong>Number of Seats</strong>: [[=i["numSeats"]]]
                   </p>
                   <p>
-                    <strong>Schedule</strong>: [[=i["schedule"]]]
+                    <strong>Schedule</strong>: 
                   </p>
                   <table class="table is-striped is-fullwidth">
                     <tr>
