--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -24,17 +24,17 @@
         <img src="[[=URL('static', 'profileTemplate.jpg')]]", class="avatar" >
       </div>
       <div class="column">
-          <h1 class="title">Edit [[=account.first_name]]'s Profile</h1>
+          <h1 class="title">Edit [[=account.firstName]]'s Profile</h1>
           
           <div class="field">
             <label class="label"> First Name </label>      
-            <div class="control"><input class="input" type="text" placeholder="[[=account.first_name]]"></div>    
+            <div class="control"><input class="input" type="text" placeholder="[[=account.firstName]]"></div>    
             
                        </div>
             
             <div class ="field">
                 <label class="label"> Last Name </label>      
-            <div class="control"><input class="input" type="text" placeholder="[[=account.last_name]]"></div>       
+            <div class="control"><input class="input" type="text" placeholder="[[=account.lastName]]"></div>       
             </div>
 
             <div class="field">
@@ -65,7 +65,7 @@
 
           <div class="field">
             <label class="label"> License Plate </label>      
-           <div class="control"><input class="input" type="text" placeholder="5XXX555"></div>
+           <div class="control"><input class="input" type="text" placeholder="e.g. 5XXX555"></div>
 
           </div>
 
@@ -127,18 +127,15 @@
       </a> 
        </div>
 
-      <div class="field is-grouped">
+      <div class="field">
       <div class="control">
         <button class="button is-link">Submit</button>
+         <a class="button is-primary" href="[[=URL('index')]]">
+        <span class = "icon"><i class = "fa fa-backward"></i></span>
+        <span>Back</span>
+      </a> 
     </div>
-     <div class="control">
-        <button class="button is-primary"  href="[[=URL('index')]]">
-         <span class="icon"><i class="fa fa-backward"></i> </span>
-                     <span> Back </span>
-
-        </button>
-    </div>
-    
+   
  </div>   
   
         
