--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -127,12 +127,12 @@
       </a> 
        </div>
 
-      <div class="field">
+       <div class="field">
       <div class="control">
         <button class="button is-link">Submit</button>
-         <a class="button is-primary" href="[[=URL('index')]]">
-        <span class = "icon"><i class = "fa fa-backward"></i></span>
-        <span>Back</span>
+         <a class="button is-danger" href="[[=URL('index')]]">
+        <span class = "icon"><i class = "fa fa-ban"></i></span>
+        <span>Exit Edit</span>
       </a> 
     </div>
    
