--- a/templates/driver.html
+++ b/templates/driver.html
@@ -59,7 +59,7 @@
             <article class="media">
               <div class="media-left">
                 <figure class="image is-64x64">
-                  <img src="profileTemplate.jpg" alt="Profile Picture"> <!-- needs to be i[profilePic] -->
+                  <img src="[[=i['profilePic']]]" alt="Profile Picture"> 
                 </figure>
               </div>
               <div class="media-content">
