--- a/templates/driver.html
+++ b/templates/driver.html
@@ -144,6 +144,7 @@
 <script>
   let driverURL = "[[=XML(driverURL)]]";
   let getUserURL ="[[=XML(getUserURL)]]";
+  let mapURL = "[[=XML(mapURL)]]";
 </script>
 <script src="js/index.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChLO4FrJZ2B87Bbuo84k8e-ePktQX-d5s&callback=initMap&libraries=&v=weekly" async></script>
