--- a/templates/rider.html
+++ b/templates/rider.html
@@ -88,6 +88,7 @@
 <!-- Loads the index-specific js for Vue -->
 <script>
   let riderURL = "[[=XML(riderURL)]]";
+  let mapURL = "[[=XML(mapURL)]]";
 </script>
 <script src="js/index.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChLO4FrJZ2B87Bbuo84k8e-ePktQX-d5s&callback=initMap&libraries=&v=weekly" async></script>
