--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -72,7 +72,7 @@
        <div class="field">
       <div class="control">
        
-         <a class="button is-danger" href="[[=URL('index')]]">
+         <a class="button is-danger is-pulled-right" href="[[=URL('index')]]">
         <span class = "icon"><i class = "fa fa-ban"></i></span>
         <span>Exit Edit</span>
       </a> 
