--- a/templates/driver.html
+++ b/templates/driver.html
@@ -119,7 +119,7 @@
                 </div>
                 <div class="control">
                   <a class="button is-primary" href="[[=URL('displayProfile', i['id'])]]">Full Bio</a>
-                  <a class="button is-primary" @focus="getUser([[=i['id']]])" href="[[=URL('message', i['id'], signer=url_signer)]]">Message</a>                </div>
+                  <a class="button is-primary" @focus="getUser([[=i['id']]])" href="[[=URL('message', i['id'], signer=url_signer)]]">Message</a>
               </div>
             </article>
           </div>
