--- a/templates/rider.html
+++ b/templates/rider.html
@@ -63,7 +63,7 @@
               </div>
               <div class="control">
                 <a class="button is-primary" href="[[=URL('displayProfile', i['id'])]]">Full Bio</a>
-                <a class="button is-primary" href="[[=URL('message', i['id'], signer=url_signer)]]">Message</a>
+                <a class="button is-primary" @focus="getUser([[=i['id']]])" href="[[=URL('message', i['id'], signer=url_signer)]]">Message</a>
               </div>
             </div>
           </article>
@@ -88,6 +88,7 @@
 <!-- Loads the index-specific js for Vue -->
 <script>
   let riderURL = "[[=XML(riderURL)]]";
+  let getUserURL ="[[=XML(getUserURL)]]";
   let mapURL = "[[=XML(mapURL)]]";
 </script>
 <script src="js/index.js"></script>
