--- a/templates/rider.html
+++ b/templates/rider.html
@@ -58,8 +58,43 @@
                   <strong>Location</strong>: [[=i["location"]]]
                 </p>
                 <p>
-                  <strong>Schedule</strong>: [[=i["schedule"]]]
+                  <strong>Schedule</strong>: 
+
                 </p>
+                <table class="table is-striped is-fullwidth">
+                  <tr>
+                     <th>Monday</th>
+                     <th>Tuesday</th>
+                     <th>Wednesday</th>
+                     <th>Thursday</th>
+                     <th>Friday</th>
+                     <th>Saturday</th>
+                     <th>Sunday</th>
+                     <th>                                             
+                    </th>
+                  </tr>
+                  <td> 
+                    [[=i["monday"]]]
+                  </td>  
+                  <td>
+                    [[=i["tuesday"]]]
+                  </td> 
+                  <td>
+                    [[=i["wednesday"]]]
+                  </td> 
+                  <td>
+                    [[=i["thursday"]]]
+                  </td> 
+                  <td>
+                    [[=i["friday"]]]
+                  </td> 
+                  <td>
+                    [[=i["saturday"]]]
+                  </td> 
+                  <td>
+                    [[=i["sunday"]]]
+                  </td>       
+                </table>   
               </div>
               <div class="control">
                 <a class="button is-primary" href="[[=URL('displayProfile', i['id'])]]">Full Bio</a>
