Add blank profile pic template

--- a/templates/editProfile.html
+++ b/templates/editProfile.html
@@ -21,6 +21,7 @@
     <div class="container is-mobile">
     <div class="columns">
       <div class="column is-one-quarter">
+        <img src="[[=URL('static', 'profileTemplate.jpg')]]", class="avatar">
         <div v-if="!profilePic">
           <p class="control">
             <div class="file is-info">
