--- a/templates/driver.html
+++ b/templates/driver.html
@@ -148,5 +148,5 @@
   let mapURL = "[[=XML(mapURL)]]";
 </script>
 <script src="js/index.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChLO4FrJZ2B87Bbuo84k8e-ePktQX-d5s&callback=initMap&libraries=&v=weekly" async></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=APIKeyHere&callback=initMap&libraries=&v=weekly" async></script>
 [[end]]
